--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,20 +7,19 @@
   <link rel="stylesheet" href="../css/contacto.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <link rel="stylesheet" href="../css/principal.css">
-  <link rel="stylesheet" href="../css/footer.css">
+  <link rel="stylesheet" href="../css/principal.css" />
+  <link rel="stylesheet" href="../css/footer.css" />
 
-  <title>contacto</title>
+  <title>Contacto</title>
 </head>
 
 <body>
   <header class="sticky-top">
-
     <nav class="navbar navbar-expand-lg container-nav">
       <!-- Navbar content -->
       <div class="container-fluid">
         <div class="container-icon">
-          <img src="../img/icono.png" alt="Bullchick" width="60" height="48">
+          <img src="../img/icono.png" alt="Bullchick" width="60" height="48" />
           <a class="navbar-brand" href="#"><b>Bullchick</b></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -29,8 +28,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mx-2 mb-lg-0">
-            <ul class="navbar-nav  mb-2 mt-2 mx-2">
-              <a class=" btn btn-secondary" href="../index.html">inicio</a>
+            <ul class="navbar-nav mb-2 mt-2 mx-2">
+              <a class="btn btn-secondary" href="../index.html">inicio</a>
             </ul>
             <ul class="navbar-nav mb-2 mt-2 mx-2 dropdown">
               <a class="dropdown-toggle btn btn-secondary" href="#" role="button" data-bs-toggle="dropdown"
@@ -42,7 +41,7 @@
                   <a class="dropdown-item" href="../pages/categorias/alimentos.html">Alimentos</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../pages/categorias/juguetes.html">juguetes</a>
+                  <a class="dropdown-item" href="../pages/categorias/juguetes.html">Juguetes</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="../pages/categorias/higiene.html">
@@ -51,16 +50,18 @@
                 </li>
               </ul>
             </ul>
-            <ul class="navbar-nav  mb-2 mt-2 mx-2">
-              <a class=" btn btn-secondary" href="./contacto.html">contactanos</a>
+            <ul class="navbar-nav mb-2 mt-2 mx-2">
+              <a class="btn btn-secondary" href="./contacto.html">Contactanos</a>
             </ul>
           </ul>
           <form class="d-flex mb-2 mt-2 mx-2" role="search">
-            <input class="form-control" type="search" placeholder="Buscar" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
+            <input class="form-control" type="search" placeholder="Buscar" aria-label="Search" />
+            <button class="btn btn-outline-success" type="submit">
+              Buscar
+            </button>
           </form>
-          <ul class="navbar-nav  mb-2 mt-2 mx-2">
-            <a class=" btn btn-secondary" href="./carrito.html">Carrito</a>
+          <ul class="navbar-nav mb-2 mt-2 mx-2">
+            <a class="btn btn-secondary" href="./carrito.html">Carrito</a>
           </ul>
           <ul class="navbar-nav me-auto mb-2 mx-2 mb-lg-0">
             <div class="btn-group" role="group" aria-label="Basic example">
@@ -71,7 +72,6 @@
         </div>
       </div>
     </nav>
-
   </header>
   <h1 class="titulo">Informacion de contacto</h1>
 
@@ -85,7 +85,7 @@
         <div class="col-md-5">
           <label for="exampleInputEmail1" class="form-label2">Ingrese Email</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-            placeholder="Email">
+            placeholder="Email" />
         </div>
       </div>
       <div class="mb-3">
@@ -98,12 +98,11 @@
     </form>
   </div>
 
-
   <div class="maps">
-    <h2 class="titulo2"> Dirección de Bullchick</h2>
+    <h2 class="titulo2">Dirección de Bullchick</h2>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.1023709809424!2d-65.20977672552903!3d-26.836696090030095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d3ad7f30f1d%3A0xf8606cd659b8e3e4!2sRollingCode%20School!5e0!3m2!1ses-419!2sar!4v1696916560065!5m2!1ses-419!2sar"
-      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+      width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
   <footer class="footer d-flex justify-content-center flex-column flex-md-row flex-md-wrap">
@@ -120,12 +119,14 @@
               fill="currentColor" viewBox="0 0 16 16">
               <path
                 d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
-            </svg> Facebook</a>
+            </svg>
+            Facebook</a>
           <a href="#"><svg xmlns="http://www.w3.org/2000/svg" class="bi bi-whatsapp" width="16" height="16"
               fill="currentColor" viewBox="0 0 16 16">
               <path
                 d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
-            </svg> whatsapp</a>
+            </svg>
+            Whatsapp</a>
         </div>
       </div>
     </div>
@@ -138,9 +139,8 @@
       </div>
     </div>
     <div class="card mx-2 mb-2 mt-2">
-      <h5 class="card-footer">Sobre nosotros</h5>
       <div class="card-body">
-        <a href="./pages/sobreNosotros.html" class="btn btn-primary">Sobre nosotros</a>
+        <a href="../pages/sobreNosotros.html" class="btn btn-primary">Sobre nosotros</a>
       </div>
     </div>
   </footer>
